# velocity

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: perf-bakeoff.yml  protocol-resilience.yml  release.yml  required-gate.yml  velocity-bench.yml
ci/autobahn/: fuzzingclient.json
ci/bench/: README.md  baseline-report.json  velocity-bench-2026-02-25T20-36-14-181Z.json  velocity-bench-2026-02-25T20-36-14-181Z.md  velocity-bench-2026-02-25T20-37-02-055Z.json  (+1 more)
deploy/: docker-compose.prod.yml
docs/: first-15-minutes.md  go-live-checklist.md
openapi/: control-plane.yaml
scripts/: autobahn-smoke.mjs  autobahn-target.mjs  contract-check.mjs  k6-ws-target.mjs  package-smoke.mjs  perf-bakeoff.mjs  toxiproxy-smoke.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/velocity_control_sdk/: __init__.py  cli.py  client.py
src/: adaptive.ts  authn.ts  authz.ts  bench-aggregate.ts  bench-core.ts  bench-metrics.ts  bench-report.ts  bench-rng.ts  bench.ts  bootstrap.ts  canary-policy.ts  cli.ts  coalescing.test.ts  coalescing.ts  codec.test.ts  codec.ts  control-plane-sdk.ts  control-plane-store.ts  control-plane.test.ts  control-plane.ts  delta.ts  doctor.ts  event-bus.ts  latency-guard.ts  listener.ts  logger.ts  metrics-exporter.test.ts  metrics-exporter.ts  metrics-store.test.ts  metrics-store.ts  ops.ts  otlp-exporter.ts  passthrough-merge.ts  policy.ts  protobuf-envelope.ts  protocol.ts  proxy-downstream.ts  proxy-session.test.ts  proxy-session.ts  proxy.ts  (+10 more)
(+23 files in other folders)
