[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velocityai-cli"
version = "0.1.3"
description = "Python SDK for Velocity control-plane APIs"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Velocity" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.scripts]
velocity-control = "velocity_control_sdk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["velocity_control_sdk*"]
